--- a/src/app.css
+++ b/src/app.css
@@ -40,21 +40,21 @@
 	}
 
 	@font-face {
-		font-family: 'Satoshi', sans-serif;
+		font-family: 'Satoshi';
 		src: local('Satoshi'), url('/fonts/satoshi/woff2/Satoshi-Bold.woff2') format('woff2');
 		src: local('Satoshi'), url('/fonts/satoshi/woff/Satoshi-Bold.woff') format('woff');
 		font-weight: 700;
 	}
 
 	@font-face {
-		font-family: 'Satoshi', sans-serif;
+		font-family: 'Satoshi';
 		src: local('Satoshi'), url('/fonts/satoshi/woff2/Satoshi-Medium.woff2') format('woff2');
 		src: local('Satoshi'), url('/fonts/satoshi/woff/Satoshi-Medium.woff') format('woff');
 		font-weight: 500;
 	}
 
 	@font-face {
-		font-family: 'Satoshi', sans-serif;
+		font-family: 'Satoshi';
 		src: local('Satoshi'), url('/fonts/satoshi/woff2/Satoshi-Regular.woff2') format('woff2');
 		src: local('Satoshi'), url('/fonts/satoshi/woff/Satoshi-Regular.woff') format('woff');
 		font-weight: 400;
