--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -37,6 +37,8 @@
 
 	body {
 		font-family: 'Satoshi', sans-serif;
+
+		@apply bg-white text-gray-900 dark:bg-deeppurple dark:text-white;
 	}
 
 	@font-face {
